--- a/index.html
+++ b/index.html
@@ -1877,42 +1877,42 @@
                                 <img src="https://sfile.chatglm.cn/chatglm4/67364a9f-7853-4687-9d8e-7a61bd57f688.jpg" alt="星海奖大学生海洋文化创意设计大赛铜奖" class="certificate-img">
                                 <div class="certificate-info">
                                     <h4>星海奖大学生海洋文化创意设计大赛</h4>
-                                    <p>铜奖</p>
+                                    <p>辽宁省铜奖</p>
                                 </div>
                             </div>
                             <div class="certificate-item" onclick="openModal('https://sfile.chatglm.cn/chatglm4/7d98166c-0a92-434f-b539-5c9d81cb877e.jpg')">
                                 <img src="https://sfile.chatglm.cn/chatglm4/7d98166c-0a92-434f-b539-5c9d81cb877e.jpg" alt="第嘉杯中华优秀传统文化创新设计大赛二等奖" class="certificate-img">
                                 <div class="certificate-info">
                                     <h4>第嘉杯中华优秀传统文化创新设计大赛</h4>
-                                    <p>二等奖</p>
+                                    <p>辽宁省二等奖</p>
                                 </div>
                             </div>
                             <div class="certificate-item" onclick="openModal('https://sfile.chatglm.cn/chatglm4/417eada9-92ca-4cec-a48d-a346aee76042.jpg')">
                                 <img src="https://sfile.chatglm.cn/chatglm4/417eada9-92ca-4cec-a48d-a346aee76042.jpg" alt="研究生文化中国两创大赛三等奖" class="certificate-img">
                                 <div class="certificate-info">
                                     <h4>研究生文化中国两创大赛</h4>
-                                    <p>三等奖</p>
+                                    <p>全国三等奖</p>
                                 </div>
                             </div>
                             <div class="certificate-item" onclick="openModal('https://sfile.chatglm.cn/chatglm4/1811782e-1bb7-4fc1-86d8-09a8891568f4.jpg')">
                                 <img src="https://sfile.chatglm.cn/chatglm4/1811782e-1bb7-4fc1-86d8-09a8891568f4.jpg" alt="两岸新锐设计竞赛华灿奖三等奖" class="certificate-img">
                                 <div class="certificate-info">
                                     <h4>两岸新锐设计竞赛华灿奖</h4>
-                                    <p>三等奖</p>
+                                    <p>赛区赛三等奖</p>
                                 </div>
                             </div>
                             <div class="certificate-item" onclick="openModal('https://sfile.chatglm.cn/chatglm4/5b91c1bc-f9b1-4ac9-a9e6-617a759cd5cd.jpg')">
                                 <img src="https://sfile.chatglm.cn/chatglm4/5b91c1bc-f9b1-4ac9-a9e6-617a759cd5cd.jpg" alt="全国大学生数字媒体科技作品竞赛三等奖" class="certificate-img">
                                 <div class="certificate-info">
                                     <h4>全国大学生数字媒体科技作品竞赛</h4>
-                                    <p>三等奖</p>
+                                    <p>辽宁省赛区三等奖</p>
                                 </div>
                             </div>
                             <div class="certificate-item" onclick="openModal('https://sfile.chatglm.cn/chatglm4/01252ecc-5b0d-45f0-8a45-732b7b322f39.jpg')">
                                 <img src="https://sfile.chatglm.cn/chatglm4/01252ecc-5b0d-45f0-8a45-732b7b322f39.jpg" alt="全国大学生数字媒体科技作品竞赛三等奖" class="certificate-img">
                                 <div class="certificate-info">
                                     <h4>全国大学生数字媒体科技作品竞赛</h4>
-                                    <p>三等奖</p>
+                                    <p>东北赛区三等奖</p>
                                 </div>
                             </div>
                             <div class="certificate-item" onclick="openModal('https://sfile.chatglm.cn/chatglm4/3438230d-f4c3-4d85-bf77-78e84c38b7c9.png')">
@@ -1922,11 +1922,11 @@
                                     <p>辽宁赛区二等奖</p>
                                 </div>
                             </div>
-                            <div class="certificate-item" onclick="openModal('https://sfile.chatglm.cn/chatglm4/3cafd1da-256d-4a75-bc22-38a89d51d35e.png')">
-                                <img src="https://sfile.chatglm.cn/chatglm4/3cafd1da-256d-4a75-bc22-38a89d51d35e.png" alt="米兰设计周中国高校设计学科师生优秀作品展全国决赛三等奖" class="certificate-img">
+                            <div class="certificate-item" onclick="openModal('https://p3-bot-sign.byteimg.com/tos-cn-i-v4nquku3lp/aa505fcd05ac47d19500ecb38390c829.jpg~tplv-v4nquku3lp-image.image?rk3s=68e6b6b5&x-expires=1758886956&x-signature=i%2BniIRU6A4dcqWI%2FwOI4JhFwUxQ%3D')">
+                                <img src="https://p3-bot-sign.byteimg.com/tos-cn-i-v4nquku3lp/aa505fcd05ac47d19500ecb38390c829.jpg~tplv-v4nquku3lp-image.image?rk3s=68e6b6b5&x-expires=1758886956&x-signature=i%2BniIRU6A4dcqWI%2FwOI4JhFwUxQ%3D" alt="国青杯第四届全国艺术设计大赛三等奖" class="certificate-img">
                                 <div class="certificate-info">
-                                    <h4>米兰设计周中国高校设计学科师生优秀作品展</h4>
-                                    <p>全国决赛三等奖</p>
+                                    <h4>国青杯第四届全国艺术设计大赛</h4>
+                                    <p>全国三等奖</p>
                                 </div>
                             </div>
                             <div class="certificate-item" onclick="openModal('https://sfile.chatglm.cn/chatglm4/5ef27ee7-55c3-4497-b064-7841acceb5a6.png')">
@@ -1936,11 +1936,11 @@
                                     <p>全国决赛三等奖</p>
                                 </div>
                             </div>
-                            <div class="certificate-item" onclick="openModal('https://sfile.chatglm.cn/chatglm4/66f55f6a-f729-43e3-9d24-e9ad626c8781.png')">
-                                <img src="https://sfile.chatglm.cn/chatglm4/66f55f6a-f729-43e3-9d24-e9ad626c8781.png" alt="米兰设计周中国高校设计学科师生优秀作品展辽宁赛区二等奖" class="certificate-img">
+                            <div class="certificate-item" onclick="openModal('https://p9-bot-sign.byteimg.com/tos-cn-i-v4nquku3lp/c9d6ee2792e14f39851710f82b973544.jpg~tplv-v4nquku3lp-image.image?rk3s=68e6b6b5&x-expires=1758886768&x-signature=6nd8bxKEWDNDkA5UBfkAP2nA%2BGo%3D')">
+                                <img src="https://p9-bot-sign.byteimg.com/tos-cn-i-v4nquku3lp/c9d6ee2792e14f39851710f82b973544.jpg~tplv-v4nquku3lp-image.image?rk3s=68e6b6b5&x-expires=1758886768&x-signature=6nd8bxKEWDNDkA5UBfkAP2nA%2BGo%3D" alt="国青杯第四届全国艺术设计大赛二等奖" class="certificate-img">
                                 <div class="certificate-info">
-                                    <h4>米兰设计周中国高校设计学科师生优秀作品展</h4>
-                                    <p>辽宁赛区二等奖</p>
+                                    <h4>国青杯第四届全国艺术设计大赛</h4>
+                                    <p>全国二等奖</p>
                                 </div>
                             </div>
                         </div>
